# cuFAGP

./: .gitignore  CMakeLists.txt  GP_nD_CPU.cpp  GP_nD_GPU.cu  README.md  combinationRepeated.m  cuFAGPutils.cu  cuFAGPutils_sparse.cu  cuLinearSolver.cu  example.m  example.sh  generateDataset.m  main.m  plots.m
figs/: time_1D.eps  time_2D.eps  time_4D.eps
include/: cuFAGPutils.hpp  cuFAGPutils_sparse.hpp  cuLinearSolver.hpp  cu_utils.hpp
matlab/: combinationRepeated.m  example.m  generateDataset.m  main.m  plots.m
src/: GP_nD_CPU.cpp  GP_nD_GPU.cu  cuFAGPutils.cu  cuLinearSolver.cu
